--- a/index.html
+++ b/index.html
@@ -1,70 +1,24 @@
 <!DOCTYPE html>
-<html>
- <head>
- <title>To-Do List App</title>
- <script>
-  function addItem() {
-   var newItem = document.createElement("div");
-   newItem.innerHTML = document.getElementById("box").value;
-   newItem.onclick = removeItem;
-   document.getElementById("list").appendChild(newItem);
-   saveList();
-  }
-  function removeItem() {
-   document.getElementById("list").removeChild(this);
-   saveList();
-  }
-  function saveList() {
-   localStorage.storedList = document.getElementById("list").innerHTML;
-  }
-  function loadList() {
-   document.getElementById("list").innerHTML = localStorage.storedList;
-   for(var i = 0; i < list.children.length; i++) {
-    list.children[i].onclick = removeItem;
-   }
-  }
- </script>
- <style>
-  .header {
-    height:75px; 
-    width: 350px; 
-    background-color:lightblue; 
-    float: center; 
-    padding:10px; 
-    margin:20px;
-    text-align:centre; 
-    font-size:24px;
-  }
-  .app {
-    height:600px;
-    width: 350px; 
-    background-color:lightgreen; 
-    float: center; 
-    padding:10px; 
-    margin:20px;
-  }
-  input[type="button"] {
-   background-color: pink;
-  }
- </style>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>To-Do App</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
-<body>
- <div class="header">
-  <img src="volkovlogo.png" style="float: left;"> 
-  <p>The House of Volkov</p>
- </div>
- <div class="app">
-  <p style="font-size:18px; font-style:bold;">Special Exhibition To-Do List</p>
-  <input type="text" id="box" value="Type here to add task"/>
-  <br/>
-  <input type="button" value="Add item" onclick="addItem();"/>
-  <br/>
-   <div id="list"></div>
- </div>
- <script>
-  if(localStorage.storedList) {
-   loadList();
-  }
- </script>
+<body class="bg-dark text-white">
+  <div id="app" class="text-center app container">
+    <h1>To-Do List</h1>
+    <hr>
+    <div id="todo-container" class="texte">
+      <input type="text" id="taskInput" class="text-white" placeholder="Add a new task...">
+      <button class="btn btn-primary" onclick="addTask()">Add Task</button>
+      <hr>
+
+    </div>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
